--- a/css/main.css
+++ b/css/main.css
@@ -9,9 +9,12 @@ body{
 /**************** Header styles start! *******************/
 .header{
     background-color: #FAFAFA;
+    position: sticky;
+    top: 0;
+    z-index: 99;
 }
 .container{
-    width: 1320px;
+    width: 100%;
     height: 80px;
 }
 .header-wrapper{
@@ -19,6 +22,8 @@ body{
     justify-content: space-between;
     text-align: center;
     margin-left: 165px;
+    width: 1138px;
+    height: 80px;
 }
 .header-logo-img{
     width: 142px;
@@ -94,7 +99,6 @@ body{
     height: 40px;
     margin-top: 15px;
     margin-bottom: 15px;
-    margin-right: 20px;
     background: #008F48;
     border-radius: 10px;
 }
@@ -104,7 +108,7 @@ body{
     margin: 9px 11px 9px 9px;
 }
 .nav-list{
-    margin-left: -42px;
+    padding: 0;
 }
 .nav-item{
     display: inline-block;
@@ -112,6 +116,10 @@ body{
     margin-right: 50px;
     margin-bottom: 28px;
 }
+.nav-item:nth-child(6){
+    margin-right: 35px;
+}
+
 .nav-link{
     text-decoration: none;
     font-size: 14px;
@@ -121,3 +129,245 @@ body{
 }
 /**************** Navbar styles end! ******************/
 /**************** Header styles end! ******************/
+
+/**************** Main styles start! ******************/
+/**************** Section1 styles start! ******************/
+.section1{
+    width: 100%;
+    height: 517px;
+}
+.section1-wrapper{
+    position: relative;
+}
+.section1-img{
+    width: 100%;
+    height: 100%;
+}
+.section1-logo{
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    left: 650px;
+    top: 50px;
+}
+.section1-card{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    width: 1380px;
+    height: 165px;
+    margin: 0 auto;
+    position: absolute;
+    left: 60px;
+    top: 250px;
+}
+.circle{
+    width: 40px;
+    height: 40px;
+    background: #A6A6A6;
+    border-radius: 50px;
+}
+.section1-symbol1{
+    width: 30px;
+    height: 30px;
+    margin: 5px 5px 5px 4px;
+}
+.section1-symbol2{
+    width: 30px;
+    height: 30px;
+    margin: 5px 4px 5px 5px;
+}
+.section1-title{
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 42px;
+    text-align: center;
+    color: #FFFFFF;
+}
+.circle1{
+    width: 15px;
+    height: 15px;
+    background: #2E2E2E;
+    border-radius: 50%;
+    margin: 50px;
+    box-shadow: 40px 0px 0px 0px #fff, -40px 0px 0px 0px #fff;
+    position: absolute;
+    left: 700px;
+    top: 450px;
+}
+/**************** Section1 styles end! ******************/
+/**************** Section2 styles start! ******************/
+.section2-wrapper{
+    display: flex;
+    justify-content: space-between;
+
+    flex-wrap: wrap;
+    width: 1101px;
+    height: 1584px;
+    margin-top: 104px;
+    margin-left: 165px;
+    border: 1px solid #000;
+}
+.section2-row{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    width: 100%;
+    height: 32px;
+}
+.section2-title{
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 100%;
+    margin-top: 0;
+    color: #000000;
+    margin-bottom: 50px;
+}
+.section2-row-end{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    width: 75px;
+    height: 32px;
+}
+.square-left{
+    width: 32px;
+    height: 32px;
+    background: #A6A6A6;
+    border-radius: 10px;
+}
+.section2-card{
+    width: 350px;
+    height: 520px;
+    background: #FFFFFF;
+    box-shadow: 0 2px 2px #CCCCCC;
+    border-radius: 5px;
+    margin-bottom: 104px;
+}
+.not{
+    text-align: center;
+    width: 100%;
+    height: 22px;
+    position: relative;
+}
+.not-date{
+    width: 20px;
+    height: 20px;
+    opacity: 0.5;
+    position: absolute;
+    left: 20px;
+}
+.date{
+    font-size: 15px;
+    line-height: 100%;
+    color: #000000;
+    opacity: 0.5;
+    position: absolute;
+    bottom: 3px;
+    left: 50px;
+}
+.not-watch{
+    width: 20px;
+    height: 20px;
+    opacity: 0.5;
+    position: absolute;
+    left: 192px;
+}
+.watch{
+    font-size: 15px;
+    line-height: 100%;
+    color: #000000;
+    opacity: 0.5;
+    position: absolute;
+    bottom: 3px;
+    left: 220px;
+}
+.not-massage{
+    width: 20px;
+    height: 20px;
+    opacity: 0.5;
+    position: absolute;
+    left: 279px;
+}
+.massage{
+    font-size: 15px;
+    line-height: 100%;
+    color: #000000;
+    opacity: 0.5;
+    position: absolute;
+    bottom: 3px;
+    left: 307px;
+}
+.section2-card-title{
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 100%;
+    color: #000000;
+    margin-bottom: 45px;
+    margin-left: 20px;
+}
+.section2-card-desc{
+    font-size: 16px;
+    line-height: 24px;
+    color: #000000;
+    opacity: 0.7;
+    margin-left: 20px;
+}
+.section2-card-button{
+    width: 120px;
+    height: 40px;
+    border: 1px solid #008F48;
+    border-radius: 10px;
+    margin-top: 22px;
+    margin-left: 20px;
+}
+.button-title{
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 100%;
+    color: #008F48;
+}
+.section2-card2{
+    width: 350px;
+    height: 520px;
+    background: #FFFFFF;
+    box-shadow: 0px 5px 15px #D2D2D2;
+    border-radius: 10px;
+}
+.section2-card2-img{
+    margin-left: 64px;
+}
+.section2-card2-title{
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 25px;
+    color: #008F48;
+    margin-bottom: 13px;
+    margin-left: 20px;
+}
+.section2-card2-button{
+    width: 120px;
+    height: 40px;
+    background: #008F48;
+    border: 1px solid #008F48;
+    border-radius: 10px;
+    margin-top: 22px;
+    margin-left: 20px;
+}
+.card2-button-title{
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 100%;
+    color: #FFFFFF;
+}
+.section2-card3-title{
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 24px;
+    color: #000000;
+    margin-bottom: 15px;
+    margin-left: 20px;
+}
+/**************** Section2 styles end! ******************/
+
+/**************** Main styles end! ******************/
