--- a/css/main.css
+++ b/css/main.css
@@ -369,5 +369,39 @@ body{
     margin-left: 20px;
 }
 /**************** Section2 styles end! ******************/
-
+.section3{
+    width: 100%;
+    height: 206px;
+    background: linear-gradient(88.68deg, #FFFFFF 36.84%, #E7E7EB 74.27%), #FFFFFF;
+    box-shadow: 0px 2px 2px #DCDCDC;
+}
+.section3-wrapper{
+    display: flex;
+    justify-content: space-between;
+    text-align: center;
+    margin-top: 1px;
+}
+.section3-start{
+    width: 208px;
+    height: 206px;
+    margin-right: 84px;
+    margin-left: 36px;
+}
+.section3-title{
+    font-weight: 600;
+    font-size: 36px;
+    line-height: 55px;
+    color: #0D374B;
+    margin-top: 48px;
+    margin-right: 102px;
+}
+.section3-button{
+    width: 214px;
+    height: 50px;
+    background: #008F48;
+    border: 1px solid #008F48;
+    border-radius: 10px;
+    margin-top: 78px;
+    margin-right: 86px;
+}
 /**************** Main styles end! ******************/
